step: 003-07 Entitäten Bereinigen